  * Store grub-pc/install_devices as persistent device names under
    /dev/disk/by-id/ (closes: #554790).  Migrate previous device names to
    that, with explicit confirmation in non-trivial cases to make sure we
    got the right ones.  If the devices we were told to install to ever go
    away, ask again.  (This is based on the implementation in Ubuntu.)

  [ Updated translations ]
  * Ukrainian (uk.po) by Yatsenko Alexandr / Borys Yanovych (closes:
    #586611).
  * Indonesian (id.po) by Arief S Fitrianto (closes: #586799).
  * Swedish (sv.po) by Martin Bagge (closes: #586827).
  * Persian (fa.po) by Behrad Eslamifar (closes: #587085).
  * French (fr.po) by Christian Perrier (closes: #587383).
  * Galician (gl.po) by Jorge Barreiro (closes: #587796).

  [ Robert Millan ]
  * Add commented GRUB_BADRAM example in debian/default/grub.

 -- Robert Millan <rmh@gnu.org>  Mon, 28 Jun 2010 23:59:46 +0200

grub2 (1.98+20100617-1) unstable; urgency=low

  * New Bazaar snapshot.
    - Fix i386-pc prefix handling with nested partitions (closes: #585068).

  * When running grub-pc.postinst from upgrade-from-grub-legacy, tell it to
    disregard the fact that /boot/grub/stage2 and /boot/grub/menu.lst still
    exist (closes: #550477).
  * Touch a marker file when grub-install is run but GRUB Legacy files are
    still around.  If that marker file is present, pretend that GRUB Legacy
    files are missing when upgrading.
  * If GRUB Legacy files are present when upgrading, scan boot sectors of
    all disks for GRUB 2.  If we find GRUB 2 installed anywhere, then ask
    the user if they want to finish conversion to GRUB 2, and warn them that
    not doing so may render the system unbootable (closes: #586143).  Thanks
    to Sedat Dilek for helping to narrow down this bug.
  * Leaving grub-pc/install_devices empty makes sense in some situations,
    but more often than not is a mistake.  On the other hand, automatically